Layout bug fix
The page would show a h-scrollbar which when dragged would mess up the
page layout.

--- a/_css/style.css
+++ b/_css/style.css
@@ -114,8 +114,7 @@ body {
 	background:#fff;
 	padding:5px;
 	text-align:left;
-	position:relative;
-	left:177px;
+	margin-left:177px; /*I'm so sorry*/
 	clear: both;
 }
 
